fix hero container size on mobile V.2

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,7 +18,6 @@ html {
 }
 
 body {
-  overflow-y: hidden;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
